--- a/app/assets/stylesheets/_alerts.sass
+++ b/app/assets/stylesheets/_alerts.sass
@@ -29,8 +29,8 @@
 .staff .alert-box
   margin-bottom: 1rem
 
-.alert-box
-  background-color: $primary-color-1
+.alert-box.error
+  background-color: lighten($color-red-1, 10%)
   font-size: 110%
 
 .alert-box.success
