--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -161,6 +161,12 @@
     padding: 2px 10px
     margin-bottom: 25px
 
+img.profile-pic
+  position: relative
+  left: -5px
+  margin: 0 0 -5px -5px 
+  padding: 0
+
 
 /* Large Screen Styles*/ 
 @media (min-width: $media-small-max)
