--- a/app/views/rubrics/design.html.haml
+++ b/app/views/rubrics/design.html.haml
@@ -43,4 +43,4 @@
         %button.add-tier(name="newTier" ng-click="metric.addTier()" ng-show="metric.isSaved()")
           + Level
 
-    %button.radius#new-rubric-metric(type="button" ng-click="newMetric()" ng-hide) + Criterion
+    %button#new-rubric-metric(type="button" ng-click="newMetric()" ng-hide) + Criterion
