--- a/app/views/submissions/_student_show.haml
+++ b/app/views/submissions/_student_show.haml
@@ -1,89 +1,88 @@
 %br
-.small-12.columns
 
-  - if @assignment.is_individual?
-    - if (@assignment.open? && ! current_student.grade_released_for_assignment?(@assignment)) || (@assignment.open? && @assignment.resubmissions_allowed?)
-      %a{:href => "#{edit_assignment_submission_path(@assignment, current_student.submission_for_assignment(@assignment))}?student_id=#{current_student.id}", :class => 'button radius'  }
-        Edit My Submission
-      .clear
+- if @assignment.is_individual?
+  - if (@assignment.open? && ! current_student.grade_released_for_assignment?(@assignment)) || (@assignment.open? && @assignment.resubmissions_allowed?)
+    %a{:href => "#{edit_assignment_submission_path(@assignment, current_student.submission_for_assignment(@assignment))}?student_id=#{current_student.id}", :class => 'button'  }
+      Edit My Submission
+    .clear
 
-    %br
+  %br
+  %p
+    %span.smallcaps Submitted:
+    = current_student.submission_for_assignment(@assignment).created_at
+
+    // Late alert if submitted after due date
+    - if current_student.submission_for_assignment(@assignment).late?
+      %span.label.alert Late!
+
+    // Checking to see if the submission was updated - if the update date is different from the creation date, displaying it
+  - if current_student.submission_for_assignment(@assignment).updated_at != current_student.submission_for_assignment(@assignment).created_at
     %p
-      %span.smallcaps Submitted:
-      = current_student.submission_for_assignment(@assignment).created_at
+      %span.smallcaps Updated:
+      %span= current_student.submission_for_assignment(@assignment).updated_at
 
-      // Late alert if submitted after due date
-      - if current_student.submission_for_assignment(@assignment).late?
-        %span.label.alert.radius Late!
+  // Displaying the link to the submission if there is one
+  - if current_student.submission_for_assignment(@assignment).link?
+    %p
+      %span.smallcaps Link:
+      = link_to current_student.submission_for_assignment(@assignment).link, current_student.submission_for_assignment(@assignment).link
 
-      // Checking to see if the submission was updated - if the update date is different from the creation date, displaying it
-    - if current_student.submission_for_assignment(@assignment).updated_at != current_student.submission_for_assignment(@assignment).created_at
-      %p
-        %span.smallcaps Updated:
-        %span= current_student.submission_for_assignment(@assignment).updated_at
+  - if current_student.submission_for_assignment(@assignment).submission_files.present?
+    %p
+      %span.smallcaps Attachments:
+      %ul.uploaded-files
+        - current_student.submission_for_assignment(@assignment).submission_files.each do |sf|
+          %li
+            = link_to sf.filename, sf.url, :target => "_blank"
 
-    // Displaying the link to the submission if there is one
-    - if current_student.submission_for_assignment(@assignment).link?
-      %p
-        %span.smallcaps Link:
-        = link_to current_student.submission_for_assignment(@assignment).link, current_student.submission_for_assignment(@assignment).link
 
-    - if current_student.submission_for_assignment(@assignment).submission_files.present?
-      %p
-        %span.smallcaps Attachments:
-        %ul.uploaded-files
-          - current_student.submission_for_assignment(@assignment).submission_files.each do |sf|
-            %li
+  - if current_student.submission_for_assignment(@assignment).text_comment?
+    %p
+      %span.smallcaps Content/Statement:
+      = raw current_student.submission_for_assignment(@assignment).text_comment
+
+
+- else
+  // link to edit the submission
+  - if @assignment.open?
+    = link_to "Edit My Submission", edit_assignment_submission_path(@assignment, @group.submission_for_assignment(@assignment)), :class => "button"
+  // Displaying when the assignment was submitted
+  .clear
+  %p
+    %span.smallcaps Submitted:
+    = @group.submission_for_assignment(@assignment).created_at
+
+    // Late alert if submitted after due date
+    - if @group.submission_for_assignment(@assignment).late?
+      %span.label.alert Late!
+    // Checking to see if the submission was updated - if the update date is different from the creation date, displaying it
+  - if @group.submission_for_assignment(@assignment).updated_at != @group.submission_for_assignment(@assignment).created_at
+    %p
+      %span.smallcaps Updated:
+      %span= @group.submission_for_assignment(@assignment).updated_at
+
+  // Displaying the link to the submission if there is one
+  - if @group.submission_for_assignment(@assignment).link?
+    %p
+      %span.smallcaps Link:
+      = link_to @group.submission_for_assignment(@assignment).link, @group.submission_for_assignment(@assignment).link
+
+  - if @group.submission_for_assignment(@assignment).submission_files.present?
+    %p
+      %span.smallcaps Attachments:
+      %ul.uploaded-files
+        - @group.submission_for_assignment(@assignment).submission_files.each do |sf|
+          %li
+            - if sf.file_processing
+              = "#{sf.filename}"
+              .icon
+                .icon-tooltip
+                  Refresh page to confirm upload has completed
+                %i.fa.fa-spinner= "(upload in progress)"
+            - else
               = link_to sf.filename, sf.url, :target => "_blank"
 
-
-    - if current_student.submission_for_assignment(@assignment).text_comment?
-      %p
-        %span.smallcaps Content/Statement:
-        = raw current_student.submission_for_assignment(@assignment).text_comment
-
-
-  - else
-    // link to edit the submission
-    - if @assignment.open?
-      = link_to "Edit My Submission", edit_assignment_submission_path(@assignment, @group.submission_for_assignment(@assignment)), :class => "button tiny radius"
-    // Displaying when the assignment was submitted
-    .clear
+  - if @group.submission_for_assignment(@assignment).text_comment?
     %p
-      %span.smallcaps Submitted:
-      = @group.submission_for_assignment(@assignment).created_at
-
-      // Late alert if submitted after due date
-      - if @group.submission_for_assignment(@assignment).late?
-        %span.label.alert.radius Late!
-      // Checking to see if the submission was updated - if the update date is different from the creation date, displaying it
-    - if @group.submission_for_assignment(@assignment).updated_at != @group.submission_for_assignment(@assignment).created_at
-      %p
-        %span.smallcaps Updated:
-        %span= @group.submission_for_assignment(@assignment).updated_at
-
-    // Displaying the link to the submission if there is one
-    - if @group.submission_for_assignment(@assignment).link?
-      %p
-        %span.smallcaps Link:
-        = link_to @group.submission_for_assignment(@assignment).link, @group.submission_for_assignment(@assignment).link
-
-    - if @group.submission_for_assignment(@assignment).submission_files.present?
-      %p
-        %span.smallcaps Attachments:
-        %ul.uploaded-files
-          - @group.submission_for_assignment(@assignment).submission_files.each do |sf|
-            %li
-              - if sf.file_processing
-                = "#{sf.filename}"
-                .icon
-                  .icon-tooltip
-                    Refresh page to confirm upload has completed
-                  %i.fa.fa-spinner= "(upload in progress)"
-              - else
-                = link_to sf.filename, sf.url, :target => "_blank"
-
-    - if @group.submission_for_assignment(@assignment).text_comment?
-      %p
-        %span.smallcaps Statement:
-        = raw @group.submission_for_assignment(@assignment).text_comment
+      %span.smallcaps Statement:
+      = raw @group.submission_for_assignment(@assignment).text_comment
