--- a/app/views/assignments/_assignment_score_level_fields.haml
+++ b/app/views/assignments/_assignment_score_level_fields.haml
@@ -7,4 +7,4 @@
     = f.hidden_field :id
   .right
     = f.hidden_field :_destroy, class: 'destroy'
-    = link_to 'Remove Level', '#', class: 'remove-assignment-score-level button radius right'
+    = link_to 'Remove Level', '#', class: 'remove-assignment-score-level button right'
