--- a/app/views/assignments/_rubrics_form.haml
+++ b/app/views/assignments/_rubrics_form.haml
@@ -7,13 +7,13 @@
           .panel-heading.clear
             = arf.hidden_field :rubric_id
             = arf.hidden_field :_destroy, value: !assignment_rubric.persisted?, class: 'destroy'
-            = link_to "#rubric-#{assignment_rubric.rubric_id}", class: 'button tiny radius remove-assignment-rubric pull-right' do
+            = link_to "#rubric-#{assignment_rubric.rubric_id}", class: 'button remove-assignment-rubric right' do
               %span.glyphicon.glyphicon-remove
               Remove Rubric
             %h3.panel-title= assignment_rubric.name
           = assignment_rubric.description
   .btn-group.add-assignment-rubric
-    %button(type="button" class="button tiny radius dropdown-toggle" data-toggle="dropdown")
+    %button(type="button" class="button dropdown-toggle" data-toggle="dropdown")
       Add a Rubric
       %span.caret
     %ul.dropdown-menu
