--- a/app/views/assignments/_self_log_form.html.haml
+++ b/app/views/assignments/_self_log_form.html.haml
@@ -4,4 +4,4 @@
   - if !present
     - if assignment.has_levels?
       = f.select :raw_score, assignment.assignment_score_levels.map { |l| [l.formatted_name,l.value] }
-    = f.submit (assignment.student_logged_button_text), :class => "button #{present ? 'alert' : 'success'} tiny radius"
+    = f.submit (assignment.student_logged_button_text), :class => "button #{present ? 'alert' : 'success'}"
