--- a/app/views/assignments/rubric_grades_review.html.haml
+++ b/app/views/assignments/rubric_grades_review.html.haml
@@ -51,7 +51,7 @@
           %h4.uppercase= student.name
           .left
             %h5.bold= "#{grade_for_assignment.score} / #{@assignment.point_total} points "
-          .right= link_to "Edit Grade", edit_assignment_grade_path(@assignment, :student_id => student.id), :class => 'tiny radius button'
+          .right= link_to "Edit Grade", edit_assignment_grade_path(@assignment, :student_id => student.id), :class => 'button'
           %br
           %br
           %table#grade-rubric-table.small-12
