--- a/app/views/badges/_form.haml
+++ b/app/views/badges/_form.haml
@@ -1,5 +1,5 @@
 - if @badge.errors.any?
-  .alert-box.alert.radius
+  .alert-box.alert
     .italic= "#{pluralize(@badge.errors.count, "error")} prohibited this #{(term_for :badge).titleize} from being saved:"
     %ul
       - @badge.errors.full_messages.each do |msg|
@@ -55,7 +55,7 @@
           %fieldset.unlock-condition
             = f.simple_fields_for :unlock_conditions, condition, class: 'form-inline' do |ucf|
               = render 'unlock_condition_fields', f: ucf
-      = link_to 'Add a Condition', '#', class: 'add-unlock-condition button radius'
+      = link_to 'Add a Condition', '#', class: 'add-unlock-condition button'
 
   %section
     %h4 Attachments
