--- a/app/views/badges/_unlock_condition_fields.haml
+++ b/app/views/badges/_unlock_condition_fields.haml
@@ -14,4 +14,4 @@
     = f.input :condition_date, as: :string, :include_blank => true, :input_html => { :class => 'datetimepicker', :value => f.try(:condition_date) }, :label => "Done By"
   .right
     = f.hidden_field :_destroy, class: 'destroy'
-    = link_to 'Delete Condition', '#', class: 'remove-unlock-condition button radius right'
+    = link_to 'Delete Condition', '#', class: 'remove-unlock-condition button right'
