--- a/app/views/badges/show.html.haml
+++ b/app/views/badges/show.html.haml
@@ -32,12 +32,12 @@
         = select_tag :team_id, options_for_select(@teams.map { |t| [t.name, t.id] }, @team.try(:id)), :prompt => "– Select #{(term_for :team).titleize} –"
 
   //badge icon, total awarded, and points
-  .panel.columns.text-center
+  .text-center
     %img{:src => @badge.icon, :alt => @badge.name, :width => "100" }
     %hr
       .center
         %b Awarded:
-        .label.radius.bold.large=@badge.awarded_count
+        .label.bold=@badge.awarded_count
 
     - if @badge.point_total?
       %hr
@@ -45,7 +45,6 @@
         %b Point Value:
         ="#{@badge.point_total}"
 
-  .small-12.large-8.columns
     - if @badge.is_unlockable?
       .panel
         %i.fa.fa-lock
@@ -68,7 +67,7 @@
               - if current_user_is_staff?
                 = link_to "(Remove)", remove_uploads_path({ :model => "BadgeFile", :upload_id => bf.id } )
   - if current_user_is_staff?
-    %table.responsive.nofeatures_default_last_name_dynatable
+    %table.nofeatures_default_last_name_dynatable
       %thead
         %tr
           - if @badge.is_unlockable?
