--- a/app/views/challenges/show.html.haml
+++ b/app/views/challenges/show.html.haml
@@ -31,7 +31,7 @@
           = link_to "(Remove)", remove_uploads_path({ :model => "ChallengeFile", :upload_id => cf.id })
 
   = form_tag edit_status_challenge_challenge_grades_path @challenge do
-    %table.responsive.nofeatures_default_score_dynatable
+    %table.nofeatures_default_score_dynatable
       %thead
         %tr
           %th= current_course.team_term
@@ -44,8 +44,8 @@
             %th{:style => "min-width: 220px"}
           - if @challenge.release_necessary?
             %th.center{"data-dynatable-no-sort" => "true" }
-              %button.button.select-all.tiny= "Check All"
-              %button.button.select-none.tiny= "Uncheck"
+              %button.button.select-all= "Check All"
+              %button.button.select-none= "Uncheck"
       %tbody
         - @teams.alpha.each do |team|
           - challenge_grade = @challenge.challenge_grades.find_by team: team
@@ -93,4 +93,4 @@
 
     .right
       - if @challenge.release_necessary? && @challenge.challenge_grades.present?
-        = submit_tag "Update Grade Statuses", :class => "button tiny radius"
+        = submit_tag "Update Grade Statuses", :class => "button"
