--- a/app/views/courses/predictor_settings.html.haml
+++ b/app/views/courses/predictor_settings.html.haml
@@ -8,7 +8,7 @@
   #massGrade
     - if @course.errors.any? 
       .columns
-        .alert-box.alert.radius
+        .alert-box.alert
           .italic= "#{pluralize(@course.errors.count, "error")} prohibited these settings from being saved:"
           %ul
             - @course.errors.full_messages.each do |msg|
@@ -43,5 +43,5 @@
                     - else
                       %input{:type => "checkbox" }
       .right.form_buttons
-        = f.button :submit, "Update Settings", :class => "button radius"
-        = link_to 'Cancel', dashboard_path, :class => "button radius transparent"
+        = f.button :submit, "Update Settings", :class => "button"
+        = link_to 'Cancel', dashboard_path, :class => "button"
