--- a/app/views/courses/timeline_settings.html.haml
+++ b/app/views/courses/timeline_settings.html.haml
@@ -7,7 +7,7 @@
   
   #massGrade
     - if @course.errors.any? 
-      .alert-box.alert.radius
+      .alert-box.alert
         .italic= "#{pluralize(@course.errors.count, "error")} prohibited these settings from being saved:"
         %ul
           - @course.errors.full_messages.each do |msg|
@@ -15,7 +15,7 @@
             
     = simple_form_for @course, method: :put, :url => timeline_settings_course_path(@course) do |f|
 
-      %table.responsive
+      %table
         %thead
           %tr
             %th= "#{term_for :assignment}"
@@ -33,6 +33,6 @@
                 %td= af.text_field :thumbnail
                 %td= af.text_field :media_credit
                 %td= af.text_field :media_caption
-      .right.form_buttons
-        = f.button :submit, "Update Settings", :class => "button radius"
-        = link_to 'Cancel', dashboard_path, :class => "button radius transparent"
+      .submit-buttons
+        = f.button :submit, "Update Settings", :class => "button"
+        = link_to 'Cancel', dashboard_path, :class => "button"
