--- a/app/views/grades/_group_show.html.haml
+++ b/app/views/grades/_group_show.html.haml
@@ -7,7 +7,7 @@
       - @group = current_student.group_for_assignment(@assignment)
     - if @group.present?
       = link_to @group.name, group_path(@group)
-      = link_to "Edit", edit_group_path(@group), :class => 'button radius'
+      = link_to "Edit", edit_group_path(@group), :class => 'button'
 
     .clear
 
@@ -21,7 +21,7 @@
 
       - if current_user_is_staff?
         - if @group.grades.graded_or_released.present?
-          = link_to "Edit Grade", group_grade_assignment_path(@assignment, :group_id => @group), :class => 'button radius'
+          = link_to "Edit Grade", group_grade_assignment_path(@assignment, :group_id => @group), :class => 'button'
 
   - if current_user_is_student?
     - if current_student.grade_for_assignment(@assignment).present?
@@ -30,7 +30,7 @@
       - else
         %p.bold
           #{current_student.try(:first_name)}'s Grade
-          %span= link_to "Edit", edit_assignment_grade_path(@assignment, :student_id => current_student.id), :class => 'button radius'
+          %span= link_to "Edit", edit_assignment_grade_path(@assignment, :student_id => current_student.id), :class => 'button'
 
       - grade = current_student.grade_for_assignment(@assignment)
       %p
@@ -52,7 +52,7 @@
         - if student.grade_for_assignment(@assignment).present?
           %p.bold
             #{student.try(:first_name)}'s Grade
-            = link_to "Edit #{student.try(:first_name)}'s Grade", edit_assignment_grade_path(@assignment, :student_id => student.id), :class => 'button radius'
+            = link_to "Edit #{student.try(:first_name)}'s Grade", edit_assignment_grade_path(@assignment, :student_id => student.id), :class => 'button'
 
           - grade = student.grade_for_assignment(@assignment)
           %p
@@ -65,4 +65,3 @@
           - if student.grade_for_assignment(@assignment).feedback.present?
             %p.bold Instructor Feedback:
             %p= raw student.grade_for_assignment(@assignment).feedback
-
