--- a/app/views/grades/_group_submission.haml
+++ b/app/views/grades/_group_submission.haml
@@ -5,7 +5,7 @@
     - else
       Your Submission
     // link to edit the submission
-    %span= link_to "Edit My Submission", edit_assignment_submission_path(@assignment, current_student.submission_for_assignment(@assignment), :student_id => current_student.id), :class => "button radius no-margin"
+    %span= link_to "Edit My Submission", edit_assignment_submission_path(@assignment, current_student.submission_for_assignment(@assignment), :student_id => current_student.id), :class => "button"
   // Displaying when the assignment was submitted
   %p
     Submitted:
@@ -13,7 +13,7 @@
 
     // Late alert if submitted after due date
     - if current_student.submission_for_assignment(@assignment).late?
-      %span.label.alert.radius Late!
+      %span.label.alert Late!
       
     // Checking to see if the submission was updated - if the update date is different from the creation date, displaying it
   - if current_student.submission_for_assignment(@assignment).updated_at != current_student.submission_for_assignment(@assignment).created_at
@@ -44,11 +44,11 @@
 - else
   - if current_user_is_staff?
     %b= "#{@group.name}'s Submission"
-    %span= link_to "Grade", group_grade_assignment_path(@assignment, :group_id => @group), :class => "button tiny radius secondary no-margin"
+    %span= link_to "Grade", group_grade_assignment_path(@assignment, :group_id => @group), :class => "button"
   - else
     Your Submission
   // link to edit the submission
-  %span= link_to "Edit My Submission", edit_assignment_submission_path(@assignment, @group.submission_for_assignment(@assignment), :group_id => @group), :class => "button radius no-margin"
+  %span= link_to "Edit My Submission", edit_assignment_submission_path(@assignment, @group.submission_for_assignment(@assignment), :group_id => @group), :class => "button"
   // Displaying when the assignment was submitted
   %p
     %b Submitted:
@@ -56,7 +56,7 @@
 
     // Late alert if submitted after due date
     - if @group.submission_for_assignment(@assignment).late?
-      %span.label.alert.radius Late!
+      %span.label.alert Late!
     // Checking to see if the submission was updated - if the update date is different from the creation date, displaying it
   - if @group.submission_for_assignment(@assignment).updated_at != @group.submission_for_assignment(@assignment).created_at
     %p
