--- a/app/views/grades/_submission.haml
+++ b/app/views/grades/_submission.haml
@@ -4,7 +4,7 @@
     - if current_user_is_staff?
       = "#{current_student.first_name}'s Submission"
     %span
-      %a{:href => "#{edit_assignment_submission_path(@assignment, current_student.submission_for_assignment(@assignment))}?student_id=#{current_student.id}", :class => 'button radius'  }
+      %a{:href => "#{edit_assignment_submission_path(@assignment, current_student.submission_for_assignment(@assignment))}?student_id=#{current_student.id}", :class => 'button'  }
         Edit My Submission
         %span.sr-only #{current_student.try(:first_name)}'s Submission
   %p
@@ -13,7 +13,7 @@
 
     // Late alert if submitted after due date
     - if current_student.submission_for_assignment(@assignment).late?
-      %span.label.alert.radius Late!
+      %span.label.alert Late!
       
     // Checking to see if the submission was updated - if the update date is different from the creation date, displaying it
   - if current_student.submission_for_assignment(@assignment).updated_at != current_student.submission_for_assignment(@assignment).created_at
@@ -47,7 +47,7 @@
   - else
     Your Submission
   // link to edit the submission
-  %span= link_to "Edit My Submission", edit_assignment_submission_path(@assignment, @group.submission_for_assignment(@assignment)), :class => "button tiny radius secondary no-margin"
+  %span= link_to "Edit My Submission", edit_assignment_submission_path(@assignment, @group.submission_for_assignment(@assignment)), :class => "button"
   // Displaying when the assignment was submitted
   %p
     %span.smallcaps Submitted:
@@ -55,7 +55,7 @@
 
     // Late alert if submitted after due date
     - if @group.submission_for_assignment(@assignment).late?
-      %span.label.alert.radius Late!
+      %span.label.alert Late!
     // Checking to see if the submission was updated - if the update date is different from the creation date, displaying it
   - if @group.submission_for_assignment(@assignment).updated_at != @group.submission_for_assignment(@assignment).created_at
     %p
