--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -1,7 +1,7 @@
 = simple_form_for @group do |f|
 
   - if @group.errors.any? 
-    .alert-box.alert.radius
+    .alert-box.alert
       .italic= "#{pluralize(@group.errors.count, "error")} prohibited this group from being saved:"
       %ul
         - @group.errors.full_messages.each do |msg|
@@ -49,7 +49,7 @@
             = f.hidden_field :id
          
       - if @group.persisted?
-        = link_to 'Add a Proposal', '#', class: 'add-proposal button radius'
+        = link_to 'Add a Proposal', '#', class: 'add-proposal button'
 
   .submit-buttons
     %ul
