--- a/app/views/layouts/navigation/_authenticated_nav.haml
+++ b/app/views/layouts/navigation/_authenticated_nav.haml
@@ -13,7 +13,7 @@
 %li.dropdown       
   %a.section-title{:href => "#", :title => "My account management"} 
     - if current_user.avatar_file_name.present?
-      %img.img-rounded{:src => current_user.avatar_file_name, :width => 25, :height => 25}
+      %img.profile-pic{:src => current_user.avatar_file_name, :height => 20}
     = current_user.public_name
     %i.fa.fa-caret-down.hidden-2m
   %ul.subnav
