--- a/app/views/submissions/_instructor_data.haml
+++ b/app/views/submissions/_instructor_data.haml
@@ -6,7 +6,7 @@
 
     // Late alert if submitted after due date
     - if @student.submission_for_assignment(@assignment).late?
-      %span.label.alert.radius Late!
+      %span.label.alert Late!
       
     // Checking to see if the submission was updated - if the update date is different from the creation date, displaying it
   - if @student.submission_for_assignment(@assignment).updated_at != @student.submission_for_assignment(@assignment).created_at
@@ -42,7 +42,7 @@
 
     // Late alert if submitted after due date
     - if @group.submission_for_assignment(@assignment).late?
-      %span.label.alert.radius Late!
+      %span.label.alert Late!
     // Checking to see if the submission was updated - if the update date is different from the creation date, displaying it
   - if @group.submission_for_assignment(@assignment).updated_at != @group.submission_for_assignment(@assignment).created_at
     %p
