--- a/app/views/users/edit_profile.html.haml
+++ b/app/views/users/edit_profile.html.haml
@@ -32,17 +32,19 @@
         .form-item
           = f.label :team_role, "#{term_for :team} Role"
           = f.text_field :team_role
-          .form_label What will you contribute to your #{term_for :team}?"
+          .form_label What will you contribute to your #{term_for :team}?
+
+      - if current_course.character_profiles?
+        .form-item
+          = f.simple_fields_for :course_memberships, @course_membership do |p|
+            = p.label :character_profile
+            .form_label What's the background of your character in this class? What skills do you have and what are you motivated by?
+            = p.input :character_profile, :label => false
 
     .form-item
       = f.input :default_course_id, :collection => (@default_course_options)
       .form_label This course will be automatically loaded when you log in to GradeCraft
 
-
-    - if @user.is_student?(current_course) && current_course.character_profiles?
-      .form-item
-        = f.simple_fields_for :course_memberships, @course_membership do |p|
-          = p.input :character_profile, :label => "Character Profile", :hint => "This will be displayed on the #{term_for :team} leaderboard"
 
     .submit-buttons
       %ul
