--- a/app/views/badges/show.html.haml
+++ b/app/views/badges/show.html.haml
@@ -32,40 +32,47 @@
         = select_tag :team_id, options_for_select(@teams.map { |t| [t.name, t.id] }, @team.try(:id)), :prompt => "– Select #{(term_for :team).titleize} –"
 
   //badge icon, total awarded, and points
-  .text-center
+  .badge-image
     %img{:src => @badge.icon, :alt => @badge.name, :width => "100" }
-    %hr
-      .center
-        %b Awarded:
-        .label.bold=@badge.awarded_count
+  .badge-details
+    %ul
+      %li="Awarded: #{@badge.awarded_count}"
+      - if @badge.point_total?
+        %li="Point Value: #{@badge.point_total}"
+      - if @badge.is_unlockable?
+        %li 
+          %a
+            %i.fa.fa-lock
+            Unlock Requirements
+          .display_on_hover.unlock_keys
+            %ul
+              - @badge.unlock_conditions.each do |condition|
+                %li= "#{condition.name} must be #{condition.condition_state}"
+      - if @badge.is_a_condition?
+        %li
+          %a
+            %i.fa.fa-key
+            Unlock Keys
+          .display_on_hover.unlock_keys
+            %ul
+              - @badge.unlock_keys.each do |key|
+                %li= "#{key.unlockable.name} is unlocked by #{key.condition_state} #{key.condition.name}"
 
-    - if @badge.point_total?
-      %hr
-      .center
-        %b Point Value:
-        ="#{@badge.point_total}"
+  .clear
+  - if @badge.description?
+    %p
+      %b Description:
+      = raw @badge.description
 
-    - if @badge.is_unlockable?
-      .panel
-        %i.fa.fa-lock
-        Unlock Requirements
-        - @badge.unlock_conditions.each do |uc|
-          = link_to uc.condition.name, uc.condition
-
-    - if @badge.description?
-      %p
-        %b Description:
-        = raw @badge.description
-
-    - if @badge.badge_files.present?
-      %p
-        %b Attachments:
-        %ul
-          - @badge.badge_files.each do |bf|
-            %li
-              = link_to bf.filename, bf.url
-              - if current_user_is_staff?
-                = link_to "(Remove)", remove_uploads_path({ :model => "BadgeFile", :upload_id => bf.id } )
+  - if @badge.badge_files.present?
+    %p
+      %b Attachments:
+      %ul
+        - @badge.badge_files.each do |bf|
+          %li
+            = link_to bf.filename, bf.url
+            - if current_user_is_staff?
+              = link_to "(Remove)", remove_uploads_path({ :model => "BadgeFile", :upload_id => bf.id } )
   - if current_user_is_staff?
     %table.nofeatures_default_last_name_dynatable
       %thead
@@ -78,7 +85,9 @@
           - if @badge.can_earn_multiple_times
             %th Count
           %th Date Awarded
-          %th{ :width => 200}
+          - if @badge.is_unlockable? 
+            %th 
+          %th{ :width => 300}
       %tbody
         - @students.each do |student|
           %tr
@@ -99,12 +108,15 @@
             %td
               - @badge.earned_badges.where(:student_id => student.id).each do |badge|
                 = badge.created_at
+            - if @badge.is_unlockable? 
+              %td
+                - if ! @badge.is_unlocked_for_student?(student)
+                  = link_to raw("<i class='fa fa-lock fa-fw'></i> Unlock"), manually_unlock_unlock_state_path(:student_id => student.id, :badge_id => @badge.id), :method => :post, :class => "button"
             %td
               .right
-                %ul
-                  - if @badge.is_unlockable? && ! @badge.is_unlocked_for_student?(student)
-                    %li= link_to raw("<i class='fa fa-lock fa-fw'></i> Unlock"), manually_unlock_unlock_state_path(:student_id => student.id, :badge_id => @badge.id), :method => :post, :class => "button"
-                  - @badge.earned_badges.where(:student_id => student.id).each do |badge|
+                - @badge.earned_badges.where(:student_id => student.id).each do |badge|
+                  %ul
                     %li= link_to raw("<i class='fa fa-star fa-fw'></i> Awarded #{badge.created_at.strftime("%b %d")}"), badge_earned_badge_path(@badge, badge.id), :class => "button"
                     %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit"), edit_badge_earned_badge_path(@badge, badge.id), :class => "button"
                     %li= link_to raw("<i class='fa fa-trash fa-fw'></i> Delete"), badge_earned_badge_path(@badge, badge), :class => "button", :method => :delete, :data => { confirm: "Are you sure you want to delete this award?" }
+                  .clear
