Slight improvement in page heights

--- a/app/views/layouts/navigation/_login_nav.haml
+++ b/app/views/layouts/navigation/_login_nav.haml
@@ -4,4 +4,4 @@
     %i.fa.fa-caret-down.hidden-sm
   %ul.subnav.logged-out
     %li= link_to "Log in with UM", "https://weblogin.umich.edu", :class => "button"
-    %li= link_to "Log in via GradeCraft", user_sessions_path, :class => "button"
+    %li= link_to "Log in via GradeCraft", new_user_session_path, :class => "button"
