--- a/app/assets/stylesheets/_badges.sass
+++ b/app/assets/stylesheets/_badges.sass
@@ -11,3 +11,7 @@
   width: 20rem
   height: 8rem
   background-color: lighten($color-yellow-1, 20%)
+
+.badge-icon
+  width: 80%
+  max-width: 100px
