--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -14,6 +14,7 @@ body
 
   &.staff 
     width: calc(100% - 252px)
+    background-color: #FFF
 
   &.student
     width: calc(100%)
@@ -23,9 +24,10 @@ body
   background-color: #FFF
 
 .student.mainContent
-  margin-top: 1rem
   width: calc(100% - 330px)
   float: left
+  background-color: #FFF
+  opacity: .9
 
 
 .footer
@@ -121,10 +123,6 @@ form .tabs-content .content
   min-height: 400px
   border: 1px solid $color-grey-5
   padding: 1rem
-
-.badge-icon
-  width: 80%
-  max-width: 100px
 
 .draggable
   display: inline
