--- a/app/assets/stylesheets/_student_subnav.sass
+++ b/app/assets/stylesheets/_student_subnav.sass
@@ -1,34 +1,34 @@
 
 /* Tabs on the student dashboard */
 .sub-nav
-  display: block
-  position: relative
-  top: 1rem
-  margin: 0
-  overflow: hidden
+  margin: 1rem 0 0 1rem
+  padding: 0
   width: auto
-  height: 32px
 
   ul
     margin: 0
     padding: 0
 
   li
+    display: inline
     list-style-type: none
     float: left
     margin-left: rem-calc(16)
-    margin-bottom: 0
+    margin: 0
 
   /* Individual Tabs */
   .navbar-nav
     display: inline
+    margin: 0 
+    padding: 0
+
     li
       font-size: .75rem
-      height: 2rem
+      height: 1rem
       background-color: $primary-color-1
       border-top-left-radius: $global-radius
       border-top-right-radius: $global-radius
-      margin: 0 0.2rem
+      margin: 0 0.5rem 0 0 
       padding: 0.5rem 0
       text-transform: capitalize
       a
