--- a/app/views/students/_student_sidebar.html.haml
+++ b/app/views/students/_student_sidebar.html.haml
@@ -1,7 +1,7 @@
 - if current_user_is_staff?
   .panel= render 'students/sidebar/sidebar_avatar'
   
-.panel= render 'students/sidebar/sidebar_earned_points_and_level'
+.panel.earned_points= render 'students/sidebar/sidebar_earned_points_and_level'
 
 - if current_course.student_weighted?
   .panel= render 'students/sidebar/sidebar_assignment_weights'
