Styling top nav

--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -8,6 +8,9 @@ body
   width: 100%
   position: relative
 
+.outer-wrap
+  padding: 0.1rem 0 
+
 .mainContainer
   margin: 0
   float: left
@@ -96,9 +99,8 @@ body
         &:hover
           color: $primary-color-1
 
-
-.tabs-content > .content
-  padding: 0
+.tab-container
+  padding: 1rem
 
 /* Allow other things to appear above the timeline */
 .vco-storyjs
