--- a/app/assets/stylesheets/_predictor.sass
+++ b/app/assets/stylesheets/_predictor.sass
@@ -7,7 +7,7 @@ $predictor-font-size-4 : .85rem
 #predictor-main-content
   background-color: rgba(255,255,255,0.5)
   // Clear tabs:
-  margin-top: 16px
+  margin-top: 0rem
   padding-bottom: 1rem
   border-radius: $global-radius
   overflow: hidden
