--- a/app/assets/stylesheets/_context_menu.sass
+++ b/app/assets/stylesheets/_context_menu.sass
@@ -4,13 +4,12 @@
   margin: 0
   width: 100%
   clear: both
-  padding: 0 1.35rem
   opacity: .8
   overflow: hidden
 
   ul
     padding: 0
-    margin: 0
+    margin: 0 0 0 1.35rem
     position: relative
     li
       list-style-type: none
