--- a/app/views/layouts/navigation/_course_list.haml
+++ b/app/views/layouts/navigation/_course_list.haml
@@ -1,11 +1,8 @@
 - current_user.courses.alphabetical.each do |c|
   - if c.active?
-    %li= link_to "#{c.courseno} #{c.semester.capitalize.first[0]}#{c.year}", change_current_course_path(:course_id => c.id), :method => 'post'
+    %li= link_to raw("<i class ='fa fa-home fa-fw'></i> #{c.courseno} #{c.semester.capitalize.first[0]}#{c.year}"), change_current_course_path(:course_id => c.id), :method => 'post'
 - if current_user_is_staff?
-  %li
-    %a{:href => new_course_path}
-      Create a New Course
-      %i.fa.fa-angle-double-right
+  %li= link_to raw("Create a New Course <i class='fa fa-angle-double-right fa-fw'></i>"), new_course_path
 
 - if current_user.archived_courses.present?
   .past_courses
@@ -13,4 +10,4 @@
     %h5 Past Courses
     - current_user.courses.alphabetical.each do |c|
       - if ! c.active?
-        %li.archived= link_to "#{c.courseno} #{c.semester.capitalize.first[0]}#{c.year}", change_current_course_path(:course_id => c.id), :method => 'post'
+        %li.archived= link_to raw("<i class ='fa fa-home fa-fw'></i>  #{c.courseno} #{c.semester.capitalize.first[0]}#{c.year}"), change_current_course_path(:course_id => c.id), :method => 'post'
