--- a/app/assets/stylesheets/_student_dashboard.sass
+++ b/app/assets/stylesheets/_student_dashboard.sass
@@ -39,11 +39,14 @@ p.predictor-description
   background-image: repeating-linear-gradient(45deg, transparent, transparent 35px, $primary-color-4 35px, $primary-color-4 70px)
 
 #levels_per_assignment
-  min-height: 250px
-  width: 100%
-  clear: both
+  min-height: 200px
+  width: 300px
+  padding: 0 
+  margin: 0 
   .chart
     height: 100px
+    padding: 0 
+    margin: 0 
 
 .right.radius.label
   margin-left: 1rem
