--- a/app/views/grades/_individual_analytics.haml
+++ b/app/views/grades/_individual_analytics.haml
@@ -2,25 +2,23 @@
   %h4.bold Basic Stats
   - if current_student.grade_released_for_assignment?(@assignment).present? || current_user_is_staff?
     %ul
-      %li
-        %span.small_uppercase Average Score:
-        = points @assignment.average
-      %li
-        %span.small_uppercase Minimum Score:
-        = points @assignment.low_score
-      %li
-        %span.small_uppercase High Score: 
-        = points @assignment.high_score
+    %li
+      %span.small_uppercase Average Score:
+      = points @assignment.average
+    %li
+      %span.small_uppercase Minimum Score:
+      = points @assignment.low_score
+    %li
+      %span.small_uppercase High Score: 
+      = points @assignment.high_score
 
-  - if current_student.grade_released_for_assignment?(@assignment).present? || current_user_is_staff?
+  - if @grades_for_assignment.count > 1 
+    %br
     %h4.bold Grade Distribution
     .grades_per_assign{ "data-scores" => @grades_for_assignment.to_json, :style => "width: 200px" }
 
   %h4.bold Participants
+  #numberComplete{:"data-type" => "full", "data-info" => "#{term_for :students} Participated", "data-percent" => "#{@assignment.completion_rate(current_course)}", "data-fgcolor" => "#61a9dc", "data-bgcolor" => "#333333", "data-text" => "#{@assignment.grade_count}", "data-dimension" => "225", "data-fontsize" => "48", "data-border" => "#222222", "data-bordersize" => "2"   }
 
-  #numberComplete{:"data-type" => "full", "data-info" => "#{term_for :students} Participated", "data-percent" => "#{@assignment.completion_rate(current_course)}", "data-fgcolor" => "#61a9dc", "data-bgcolor" => "#333333", "data-text" => "#{@assignment.grade_count}", "data-dimension" => "250", "data-fontsize" => "38", "data-border" => "#222222", "data-bordersize" => "2", :style => "width: 200px"   }
-
-  / .small-12.medium-12.large-6.columns.box
-  /   - if current_student.grade_released_for_assignment?(@assignment).present? || current_user_is_staff?
-  /     %h4.bold Percentage Scores Earned
-  /     #levels_per_assignment{'data-levels' =>  @assignment.percentage_score_earned.to_json }
+  %h4.bold Percentage Scores Earned
+  #levels_per_assignment{'data-levels' =>  @assignment.percentage_score_earned.to_json }
