Counting predicted grades per assignment, styling tabs

--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -126,6 +126,15 @@ form .tabs-content .content
   border: 1px solid $color-grey-5
   padding: 1rem
 
+hr.dotted
+  border-color: #FFF
+  border: 0
+  border-bottom: 1px dashed $secondary-color-3
+
+hr.light-grey
+  border-color: $color-grey-3
+  border: 1px
+
 .draggable
   display: inline
 
