--- a/app/assets/stylesheets/_tabs.sass
+++ b/app/assets/stylesheets/_tabs.sass
@@ -25,5 +25,20 @@
     font-family: Avenir, san-serif
 
 .ui-widget-header
-  background-color: #FFF
   border: 0
+
+.ui-tabs .ui-tabs-nav
+  background: lighten($primary-color-1, 60%) !important
+  border-bottom: 10px solid lighten($color-blue-0, 10%)
+
+  li.ui-state-default
+    background: lighten($secondary-color-2, 30%) !important
+    border: 0
+
+    &:hover
+      background: $secondary-color-2 !important
+
+    &.ui-state-active
+      background: lighten($color-blue-0, 10%) !important
+      a 
+        color: #FFF !important
