--- a/app/views/assignments/_guidelines.haml
+++ b/app/views/assignments/_guidelines.haml
@@ -1,35 +1,36 @@
-- if @assignment.pass_fail?
-  .italic= "#{term_for :pass}/#{term_for :fail} Assignment"
-- else
-  .italic= "#{points @assignment.point_total} points possible"
+.tab-container
+  - if @assignment.pass_fail?
+    .italic= "#{term_for :pass}/#{term_for :fail} Assignment"
+  - else
+    .italic= "#{points @assignment.point_total} points possible"
 
-.italic= "Opens: #{@assignment.open_at}" if @assignment.open_at?
-.italic= "Due: #{@assignment.due_at}" if @assignment.due_at?
+  .italic= "Opens: #{@assignment.open_at}" if @assignment.open_at?
+  .italic= "Due: #{@assignment.due_at}" if @assignment.due_at?
 
-- if @assignment.student_logged? && @assignment.open? && current_user_is_student?
-  = render partial: "assignments/self_log_form", locals: { student: current_student, assignment: @assignment }
+  - if @assignment.student_logged? && @assignment.open? && current_user_is_student?
+    = render partial: "assignments/self_log_form", locals: { student: current_student, assignment: @assignment }
 
-- if @assignment.assignment_files.present?
-  %hr
-  %h4.uppercase Downloads
-  %ul
-    - @assignment.assignment_files.each do |af|
-      %li= link_to af.filename, af.url
+  - if @assignment.assignment_files.present?
+    %hr.dotted
+    %h4.uppercase Downloads
+    %ul
+      - @assignment.assignment_files.each do |af|
+        %li= link_to af.filename, af.url
 
-- if @assignment.is_unlockable?
-  %hr
-  %i.fa.fa-lock
-  Unlock Requirements
-  - @assignment.unlock_conditions.each do |uc|
-    = link_to uc.condition.name, uc.condition
+  - if @assignment.is_unlockable?
+    %hr.dotted
+    %i.fa.fa-lock
+    Unlock Requirements
+    - @assignment.unlock_conditions.each do |uc|
+      = link_to uc.condition.name, uc.condition
 
-- if @assignment.description.present?
-  %hr
-  %h4.uppercase Guidelines:
-  %p= raw @assignment.description
+  - if @assignment.description.present?
+    %hr.dotted
+    %h4.uppercase Guidelines:
+    %p= raw @assignment.description
 
-- if @assignment.assignment_type.predictor_description.present?
-  %hr
-  %h4.uppercase #{ @assignment.assignment_type.name} Guidelines:
+  - if @assignment.assignment_type.predictor_description.present?
+    %hr.dotted
+    %h4.uppercase #{ @assignment.assignment_type.name} Guidelines:
 
-  %p= raw @assignment.assignment_type.predictor_description
+    %p= raw @assignment.assignment_type.predictor_description
