--- a/app/views/home/_video_promo.haml
+++ b/app/views/home/_video_promo.haml
@@ -8,5 +8,5 @@
     .columns.video
       <iframe src="https://www.youtube.com/embed/kxb3wVwmYyc" frameborder="0" allowfullscreen></iframe>
 
-  .columns.login
-    = render 'user_sessions/form'
+  .columns.one-third
+    .columns.login= render 'user_sessions/form'
