--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,6 @@
-.video-container= render "video_promo"
+.homepage
+  .video-container= render "video_promo"
 
-.press-container= render "press_and_social_media"
+  .press-container= render "press_and_social_media"
 
-.newsletter-container= render "newsletter_signup"
+  .newsletter-container= render "newsletter_signup"
