Styled analytics pages

--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -68,7 +68,7 @@
   width: auto !important
 
 /* Makes the box plot responsive */
-#student_grade_distro canvas, .grades_per_assign canvas
+#student_grade_distro canvas
   width: 100% !important
   margin: 1rem 0
 
