--- a/app/assets/stylesheets/_typography.sass
+++ b/app/assets/stylesheets/_typography.sass
@@ -88,10 +88,10 @@ h4.subtitle
     margin-bottom: 0 !important
 
 h4.subtitle.fail
-  background-color: $alert-color
+  color: $alert-color
 
 h4.subtitle.success
-  background-color: $secondary-color-1
+  color: $secondary-color-1
 
 h5.section-title
   font-size: 1.3rem
