Allow for text fields without froala, styling rubrics with new color scheme

--- a/app/views/announcements/_form.html.haml
+++ b/app/views/announcements/_form.html.haml
@@ -13,7 +13,7 @@
 
   %section
     %h4 Body
-    = f.text_area :body, :id => "edit"
+    = f.text_area :body, :class => "froala"
 
   .submit-buttons
     %ul
