--- a/app/views/badges/_form.haml
+++ b/app/views/badges/_form.haml
@@ -38,7 +38,7 @@
 
     .textarea
       .form_label Describe what this #{term_for :badge} means, and how it can be earned. Note that if this #{term_for :badge} is marked as visible then this description will also be viewable in the list of #{term_for :badges}.
-      = f.text_area :description
+      = f.text_area :description, :class => "froala"
 
   %section
     %h4 Unlocks
