--- a/app/views/challenge_grades/_form.html.haml
+++ b/app/views/challenge_grades/_form.html.haml
@@ -18,7 +18,7 @@
   %section
     %h4 Feedback
     .textarea
-      = f.text_area :text_feedback
+      = f.text_area :text_feedback, :class => "froala"
 
   .submit-buttons
     %ul
