--- a/app/views/challenges/_form.html.haml
+++ b/app/views/challenges/_form.html.haml
@@ -28,7 +28,7 @@
 
     .textarea
       .form_label What do the #{term_for :teams} need to do to succeed?
-      = f.text_area :description
+      = f.text_area :description, :class => "froala"
 
   %section
     %h4 GradeCraft Settings
