--- a/app/views/courses/_form.html.haml
+++ b/app/views/courses/_form.html.haml
@@ -168,7 +168,7 @@
     .form-item
       .textarea
         .form_label What would you like to tell students about how they should expected to be graded?
-        = f.text_area :grading_philosophy
+        = f.text_area :grading_philosophy, :class => "froala"
 
   %section
     %h4 Multipliers
