--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -12,7 +12,7 @@
   
   %section
     %h4 Description
-    = f.text_area :description
+    = f.text_area :description, :class => "froala"
   
   %section
     %h4 Timeline Settings
