--- a/app/views/groups/review.html.haml
+++ b/app/views/groups/review.html.haml
@@ -42,7 +42,7 @@
     %br
 
     .textarea
-      = f.text_area :text_feedback
+      = f.text_area :text_feedback, :class => "froala"
       .form_label #{(term_for :group).capitalize} Feedback
 
     .submit-buttons
