--- a/app/views/submissions/_form.html.haml
+++ b/app/views/submissions/_form.html.haml
@@ -29,7 +29,7 @@
 
     - if @assignment.accepts_text
       %h4.uppercase Content/Statement
-      = f.text_area :text_comment
+      = f.text_area :text_comment, :class => "froala"
 
   .submit-buttons
     %ul
