--- a/app/assets/stylesheets/_rubrics.sass
+++ b/app/assets/stylesheets/_rubrics.sass
@@ -39,7 +39,7 @@
   height: 60px
   border-bottom-left-radius: $global-radius
   border-bottom-right-radius: $global-radius
-  background: lighten($primary-color-3, 52%)
+  background: darken($color-blue-2, 10%)
 
   h4#points-legend, h4.points-legend
     font-size: 22px
@@ -48,10 +48,10 @@
 
     .points-assigned
       margin-right: -4px
-      color: #666
       font-weight: bold
-    .points-missing
       color: $alert-color
+    .points-missing
+      color: lighten($secondary-color-3, 30%)
     .points-satisfied
       color: $secondary-color-3
     .points-overage
@@ -61,7 +61,7 @@ h4.notice
   font-size: 14px
   font-style: italic
   font-weight: normal
-  color: #666
+  color: lighten($secondary-color-3, 30%)
   text-transform: none
 
 #rubric-column-heading
@@ -105,7 +105,7 @@ h4.notice
   background: #eee
 
   &.saved
-    background: $primary-color-5
+    background: $primary-color-3
 
   input.points
     z-index: 500
@@ -138,7 +138,7 @@ h4.notice
   bottom: 6px
   right: 20px
   font-size: 11px
-  color: #333
+  color: #FFF
 
 .metric.ng-valid .messages
   color: #FFF
