--- a/app/views/assignments/_form.haml
+++ b/app/views/assignments/_form.haml
@@ -59,7 +59,7 @@
     %h4 Assignment Description
     .textarea
       .form_label This will be shown to students on their dashboard, and when they submit their assignment.
-      = f.text_area :description
+      = f.text_area :description, :class => "froala"
       
   %section
     %h4= "Advanced Settings"
