--- a/app/views/grades/group_edit.html.haml
+++ b/app/views/grades/group_edit.html.haml
@@ -25,7 +25,7 @@
       - else
         = f.text_field :raw_score, :label => "Score", :hint => "Total Assignment Points: #{ points @assignment.point_total }", data: {autonumeric: true, "m-dec" => "0"}, :value => @group.students.first.grade_for_assignment(@assignment).try(:raw_score)
 
-    = f.text_area :feedback, :value => @group.students.first.grade_for_assignment(@assignment).try(:feedback)
+    = f.text_area :feedback, :value => @group.students.first.grade_for_assignment(@assignment).try(:feedback), :class => "froala"
 
     - if @assignment.release_necessary?
       - if current_user_is_gsi?
