Styling sidebars and rubrics cross browser

--- a/app/assets/stylesheets/_rubrics.sass
+++ b/app/assets/stylesheets/_rubrics.sass
@@ -83,6 +83,9 @@ h4.notice
     float: left
     width: calc(100% - 250px)
 
+td.tier-td
+  border: 1px solid $color-grey-4
+
 #metric-box
   width: 94%
 
