--- a/app/assets/stylesheets/_staff_sidebar.sass
+++ b/app/assets/stylesheets/_staff_sidebar.sass
@@ -2,7 +2,7 @@
 .sidebar
   width: 220px
   float: left
-  padding: 1rem
+  padding: .75rem 1rem
   background-color: $primary-color-1
   opacity: .8
 
@@ -10,17 +10,18 @@
     margin-bottom: .75rem
 
   input[type=text]
-    height: 1.6rem
+    height: 1.7rem
     border: 0
+    float: left
     padding: 5px
     width: 188px
-    margin-bottom: .25rem
+    margin-bottom: .75rem
     border-top-left-radius: $global-radius
     border-bottom-left-radius: $global-radius
 
   a.button
     width: 20px
-    padding: 7px 6px
+    padding: 8px 6px 7px
     float: right
     border-top-left-radius: 0
     border-bottom-left-radius: 0
@@ -58,7 +59,7 @@
       text-decoration: none
 
     a:hover, a:focus
-      background-color: $primary-color-2
+      background-color: $primary-color-1 !important
       color: #FFF
 
   /* Spacing the list divider */
