--- a/app/views/assignments/_rubric_preview.html.haml
+++ b/app/views/assignments/_rubric_preview.html.haml
@@ -1,31 +1,32 @@
-%table.full-width#grade-rubric-table
-  %thead
-    %tr
-      %td
-        .bold Criteria
-      %td(colspan="#{@assignment.rubric.try(:max_tier_count)}")
-        .bold Levels
-
-  %tbody
-    - @metrics.each do |metric|
+.tab-container
+  %table#grade-rubric-table
+    %thead
       %tr
-        %td.metric
-          .metric-heading
-            .metric-name.bold= metric.wrapped_name(28).html_safe
-            .metric-points.italic= "#{points metric.max_points} Points"
-          .metric-description= metric.wrapped_description(40).html_safe
-        - metric.tiers.sorted.each do |tier|
-          %td.tier
-            .tier-heading
-              .tier-name.uppercase= tier.wrapped_name(25).html_safe
-              .tier-points.italic= "#{points tier.points} Points"
-            .tier-description= tier.description
+        %td
+          .bold Criteria
+        %td(colspan="#{@assignment.rubric.try(:max_tier_count)}")
+          .bold Levels
 
-            .row.badge-row
-              - tier.tier_badges.each_with_index do |badge, index|
-                - if index < 2
-                  %span.tier-badge-image
-                    %img{:src => badge.badge.icon, :class => "tier_badge" }
-        - rubric_max_tier_count = @rubric.max_tier_count
-        - if metric.tiers.size < rubric_max_tier_count
-          %td.filler(colspan="#{rubric_max_tier_count - metric.tiers.size}")
+    %tbody
+      - @metrics.each do |metric|
+        %tr
+          %td
+            .metric-heading
+              %h3.metric-name.bold= metric.wrapped_name(28).html_safe
+              .metric-points.italic= "#{points metric.max_points} Points"
+            .metric-description= metric.wrapped_description(40).html_safe
+          - metric.tiers.sorted.each do |tier|
+            %td.tier-td
+              .tier-heading
+                .tier-name.uppercase= tier.wrapped_name(25).html_safe
+                .tier-points.italic= "#{points tier.points} Points"
+              .tier-description= tier.description
+
+              .row
+                - tier.tier_badges.each_with_index do |badge, index|
+                  - if index < 2
+                    .tier-badge-image
+                      %img{:src => badge.badge.icon, :class => "tier_badge", :width => "40px" }
+          - rubric_max_tier_count = @rubric.max_tier_count
+          - if metric.tiers.size < rubric_max_tier_count
+            %td.filler(colspan="#{rubric_max_tier_count - metric.tiers.size}")
